// Original file: node_modules/soum-proto/proto/commission.proto

import type {
  CalculateCommissionSummaryRequest as _commission_CalculateCommissionSummaryRequest,
  CalculateCommissionSummaryRequest__Output as _commission_CalculateCommissionSummaryRequest__Output,
} from '../commission/CalculateCommissionSummaryRequest';

export interface CalculateCommissionSummaryRequestForList {
  calculateCommissionSummaryRequests?: _commission_CalculateCommissionSummaryRequest[];
}

export interface CalculateCommissionSummaryRequestForList__Output {
  calculateCommissionSummaryRequests: _commission_CalculateCommissionSummaryRequest__Output[];
}
