// Original file: node_modules/soum-proto/proto/commission.proto

import type {
  CalculateCommissionSummaryResponse as _commission_CalculateCommissionSummaryResponse,
  CalculateCommissionSummaryResponse__Output as _commission_CalculateCommissionSummaryResponse__Output,
} from '../commission/CalculateCommissionSummaryResponse';

export interface CalculateCommissionSummaryResponseForList {
  calculateCommissionSummaryResponses?: _commission_CalculateCommissionSummaryResponse[];
}

export interface CalculateCommissionSummaryResponseForList__Output {
  calculateCommissionSummaryResponses: _commission_CalculateCommissionSummaryResponse__Output[];
}
